# SearchEngineCPP

./: .gitignore  CMakeLists.txt  README.md  document.cpp  main.cpp  package-lock.json  package.json
backend/: package-lock.json  package.json  server.js
backend/controllers/: searchController.js  uploadController.js
backend/routes/: searchRoutes.js
backend/services/: searchService.js
backend/uploads/: ATCD.txt  DAA.txt
data/: doc1.txt  doc2.txt
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
index/: FuzzySearch.cpp  FuzzySearch.h  InvertedIndex.cpp  InvertedIndex.h  Trie.cpp  Trie.h
models/: Document.cpp  Document.h
search/: QueryParser.cpp  QueryParser.h  SearchEngine.cpp  SearchEngine.h  SnippetGenerator.cpp  SnippetGenerator.h
test/: readfinal.cpp
test/data/: byebye.txt  doc3.txt  doc4.txt  haha.txt  hibye.txt  hihi.txt
tokenizer/: Tokenizer.cpp  Tokenizer.h
